@@ -1,5 +1,9 @@
 2006-06-15  Tania Bento  <tbento@redhat.com>
 
+	* gnu/testlet/javax/swing/JRadioButton/isFocusable.java: New test.
+
+2006-06-15  Tania Bento  <tbento@redhat.com>
+
 	* gnu/testlet/javax/swing/JCheckBox/isFocusable.java: New test.
 
 2006-06-15  Tania Bento  <tbento@redhat.com>
